--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  @apply bg-gray-950 text-gray-900 antialiased;
+  @apply  text-gray-900 antialiased;
 }
 
 /* Custom reusable button style */
